okay its fixed forreal this time